# RIE

./: .gitignore  README.md  pyproject.toml
rie/: mainWindow.py  resizeImage.py  startFile.py
tests/: test_rie.py
